# spangen

./: Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh
.github/workflows/: ci.yml
src/: cli.rs  constants.rs  data.rs  main.rs  types.rs
