[package]
name = "spangen"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
fake = { version = "4.0.0", features = ["time"] }
hex = "0.4.3"
log = "0.4.25"
pretty_env_logger = "0.5.0"
rand = "0.9.0"
rand_distr = "0.5.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
time = "0.3.37"
